<resources>
    <string name="app_name">VLT Demo-Java</string>
    <string name="map_key">Enter VLTApiKey here, contact Customer Success for your key</string>

    <string name="title_activity_main">Home</string>
    <string name="title_activity_map_mode_demo">Mode</string>
    <string name="title_activity_layers_demo">Relative Layering</string>
    <string name="title_activity_map_traffic">Traffic</string>
    <string name="title_activity_map_camera_demo">Camera</string>
    <string name="title_activity_map_gestures">Map Gestures</string>
    <string name="title_activity_map_shapes_demo">Shapes &amp; Markers</string>
    <string name="title_activity_user_location_demo">User Location</string>
    <string name="title_activity_geojson_demo">GeoJSON</string>
    <string name="title_activity_map_bounding_box">Bounding Box</string>
    <string name="title_activity_map_layers">Layers</string>
    <string name="title_activity_navigation">Navigation</string>

    <string name="welcome_header_label">Welcome to the VLT Demo Application, view our supported functionality below.</string>
    <string name="mode_header_label">Verizon map modes show fresh day-time map tiles in multiple styles (e.g. - day, 3D day, night, 3D night, satellite) with additional options including terrain.</string>
    <string name="camera_header_label">Use camera controls to programmatically set, manage and limit user zoom, tilt and bearing.</string>
    <string name="shapes_header_label">Place points, lines and shapes to customize maps.</string>
    <string name="geojson_header_label">Use GeoJSON feature collections to create and style points, lines and shapes on your map.</string>
    <string name="traffic_header_label">Control traffic layer visibilty to show traffic flow and traffic incidents.</string>
    <string name="gestures_header_label">Understand user interactions with the map using our gesture listeners and callbacks.</string>
    <string name="user_location_header_label">Display your real-time location, anywhere in the world.</string>
    <string name="layers_header_label">Easily group objects together on a layer, and place them on the map relative to other layers.</string>
    <string name="bounding_box_header_label">Set camera position using latitude and longitude bounds.</string>
    <string name="navigation_header_label">Integrate HERE Navigation SDK with VLT Maps SDK.</string>

    <string name="camera_metric_tilt_label">Tilt: %1$s</string>
    <string name="camera_metric_bearing_label">Bearing: %1$s</string>
    <string name="camera_metric_zoom_label">Zoom Level: %1$s</string>

    <string name="camera_invalid_number_message">Must be valid number.</string>

    <string name="day_mode_label">Day</string>
    <string name="day_3d_mode_label">3D Day</string>
    <string name="night_mode_label">Night</string>
    <string name="night_3d_mode_label">3D Night</string>
    <string name="satellite_mode_label">Sat</string>

    <string name="tilt_label">Tilt</string>
    <string name="update_label">Update</string>
    <string name="welcome_label">Welcome</string>
    <string name="bearing_label">Bearing</string>
    <string name="zoom_label">Zoom Level</string>
    <string name="dismiss_label">Dismiss</string>
    <string name="map_camera_dialog_label">Camera Metrics</string>
    <string name="current_camera_metrics_label">Current Metrics</string>
    <string name="map_shapes_dialog_label">Shape &amp; Marker options</string>
    <string name="geojson_dialog_label">GeoJSON options</string>

    <string name="circle_label">Circle</string>
    <string name="marker_label">Marker</string>
    <string name="polygon_label">Polygon</string>
    <string name="geojson_label">GeoJson</string>
    <string name="traffic_label">Traffic</string>
    <string name="polyline_label">Polyline</string>
    <string name="traffic_flow_on_label">Traffic Flow On</string>
    <string name="traffic_flow_off_label">Traffic Flow Off</string>
    <string name="traffic_incident_on_label">Traffic Incidents On</string>
    <string name="traffic_incident_off_label">Traffic Incidents Off</string>
    <string name="layers_edit_label">Edit Layers</string>

    <string name="point_label" translatable="false">Point</string>
    <string name="multipoint_label" translatable="false">MultiPoint</string>
    <string name="multipolygon_label" translatable="false">MultiPolygon</string>
    <string name="linestring_label" translatable="false">LineString</string>
    <string name="multilinestring_label" translatable="false">MultiLineString</string>

    <string name="zoom_to">Zoom to…</string>
    <string name="colorado_label">Colorado</string>
    <string name="texas_label">Texas</string>
    <string name="new_york_label">New York</string>
    <string name="utah_label">Utah</string>
</resources>