<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">
    <CheckBox
        android:id="@+id/polyline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/polyline_label"
        android:buttonTint="@color/checkboxButtonTint" />
    <CheckBox
        android:id="@+id/polygon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/polygon_label"
        android:buttonTint="@color/checkboxButtonTint" />
    <CheckBox
        android:id="@+id/circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/circle_label"
        android:buttonTint="@color/checkboxButtonTint" />
    <CheckBox
        android:id="@+id/marker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marker_label"
        android:buttonTint="@color/checkboxButtonTint" />
</LinearLayout>